--- a/partials/_sidebar.html
+++ b/partials/_sidebar.html
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../../index.html">
+      <a class="nav-link" href="../../pages/dashboard/index.html">
         <span class="menu-title">Dashboard</span>
         <i class="mdi mdi-home menu-icon"></i>
       </a>
