--- a/views/partials/_sidebar.html
+++ b/views/partials/_sidebar.html
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../../pages/dashboard/index.html">
+      <a class="nav-link" href="../../views/dashboard/index.html">
         <span class="menu-title">Dashboard</span>
         <i class="mdi mdi-home menu-icon"></i>
       </a>
@@ -29,22 +29,22 @@
       </a>
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="../../pages/orders/orders_pending.html">Orders Pending</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../pages/orders/orders_dispatched.html">Orders Dispatched</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../pages/orders/orders_delivered.html">Orders Delivered</a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_pending.html">Orders Pending</a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_dispatched.html">Orders Dispatched</a></li>
+          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_delivered.html">Orders Delivered</a></li>
         </ul>
       </div>
     </li>
    
     <li class="nav-item">
-      <a class="nav-link" href="../../pages/product_form/add_product.html">
+      <a class="nav-link" href="../../views/product_form/add_product.html">
         <span class="menu-title">Add Item</span>
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
       </a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="../../pages/users/user_table.html">
+      <a class="nav-link" href="../../views/users/user_table.html">
         <span class="menu-title">Users</span>
         <i class="mdi mdi-table-large menu-icon"></i>
       </a>
