--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -9,13 +9,13 @@
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
     $(function(){
-      $('#header').load('../../partials/_navbar.html')
+      $('#header').load('../partials/_navbar.html')
     })
     $(function(){
-      $('#side').load('../../partials/_sidebar.html')
+      $('#side').load('../partials/_sidebar.html')
     })
     $(function(){
-      $('#foot').load('../../partials/_footer.html')
+      $('#foot').load('../partials/_footer.html')
     })
 
 
@@ -45,7 +45,6 @@
 <!-- side bar ends-->
         <div class="main-panel">
           <div class="content-wrapper">
-         
             <div class="page-header">
               <h3 class="page-title">
                 <span class="page-title-icon bg-gradient-primary text-white mr-2">
