--- a/views/order_details/delivered.html
+++ b/views/order_details/delivered.html
@@ -10,13 +10,13 @@
 	<script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
     $(function(){
-      $('#header').load('../../partials/_navbar.html')
+      $('#header').load('../partials/_navbar.html')
     })
     $(function(){
-      $('#side').load('../../partials/_sidebar.html')
+      $('#side').load('../partials/_sidebar.html')
     })
     $(function(){
-      $('#foot').load('../../partials/_footer.html')
+      $('#foot').load('../partials/_footer.html')
     })
 
 
@@ -53,15 +53,15 @@
             <div class="content-wrapper">
               <div class="page-header">
     
-<div class="container">
+<div class="container" style="background-color: white;">
     <div class="row">
         <div class="col-xs-12">
-    		<div class="invoice-title">
+    		<div class="invoice-title" style="padding-left: 20px;">
                 <h2>Invoice</h2>
                 <h3>Order # 12345</h3>
     		</div>
     		<hr>
-    		<div class="row" style="padding-left: 20px;">
+    		<div class="row" style="padding-left: 40px;">
     			<div class="col-xs-6">
     				<address>
     				<strong>Billed To:</strong><br>
@@ -73,7 +73,7 @@
     			</div>
     			
     		</div>
-    		<div class="row" style="padding-left: 20px;">
+    		<div class="row" style="padding-left: 40px;">
     			<div class="col-xs-6">
     				<address>
     					<strong>Payment Method:</strong><br>
