--- a/views/order_details/dispatched.html
+++ b/views/order_details/dispatched.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Purple Admin</title>
 
+  
 	<script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
     $(function(){
-      $('#header').load('../../partials/_navbar.html')
+      $('#header').load('../partials/_navbar.html')
     })
     $(function(){
-      $('#side').load('../../partials/_sidebar.html')
+      $('#side').load('../partials/_sidebar.html')
     })
     $(function(){
-      $('#foot').load('../../partials/_footer.html')
+      $('#foot').load('../partials/_footer.html')
     })
 
 
@@ -52,15 +53,15 @@
             <div class="content-wrapper">
               <div class="page-header">
     
-<div class="container">
+<div class="container" style="background-color: white;">
     <div class="row">
         <div class="col-xs-12">
-    		<div class="invoice-title">
+    		<div class="invoice-title" style="padding-left: 20px;">
                 <h2>Invoice</h2>
                 <h3>Order # 12345</h3>
     		</div>
     		<hr>
-    		<div class="row" style="padding-left: 20px;">
+    		<div class="row" style="padding-left: 40px;">
     			<div class="col-xs-6">
     				<address>
     				<strong>Billed To:</strong><br>
@@ -72,7 +73,7 @@
     			</div>
     			
     		</div>
-    		<div class="row" style="padding-left: 20px;">
+    		<div class="row" style="padding-left: 40px;">
     			<div class="col-xs-6">
     				<address>
     					<strong>Payment Method:</strong><br>
@@ -150,16 +151,7 @@
 </div>
 </div>
 <!-- page-body-wrapper ends -->
-<div class="container">
-    <div class="row">
-<div class="col-md-12">
-    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;">Delete</button>
-    <button type="button" class="btn btn-gradient-dark btn-fw"  style="margin-left: 10px;">Update</button>
-    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;"> Dispatch</button>
-    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;">Delivered</button>
-</div>
-       </div>
-   </div>
+<button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 20px;">Delivered</button>
 </div>
 <div id="foot"></div>
 </div>
