--- a/views/orders/orders_delivered.html
+++ b/views/orders/orders_delivered.html
@@ -8,15 +8,16 @@
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
-    $(function(){
-      $('#header').load('../../partials/_navbar.html')
+      $(function(){
+      $('#header').load('../partials/_navbar.html')
     })
     $(function(){
-      $('#side').load('../../partials/_sidebar.html')
+      $('#side').load('../partials/_sidebar.html')
     })
     $(function(){
-      $('#foot').load('../../partials/_footer.html')
+      $('#foot').load('../partials/_footer.html')
     })
+
 
 
   </script>
@@ -36,6 +37,7 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+  </head>
   <body>
     <div class="container-scroller">
       <!-- partial:partials/_navbar.html -->
@@ -53,7 +55,7 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Orders Dispatched</h4>
+                    <h4 class="card-title">Orders Delievered</h4>
                    
                     <table class="table">
                         <thead>
@@ -70,35 +72,35 @@
                             <td>Jacob</td>
                             <td>53275531</td>
                             <td>12 May 2017</td>
-                            <td><label class="badge badge-gradient-warning">Dispatched</label></td>
-                            <td><a href="../order_details/dispatched.html" > Order Details </a></td>
+                            <td><label class="badge badge-gradient-success">Completed</label></td>
+                            <td><a href="../order_details/delivered.html"> Order Details </a></td>
                           </tr>
                           <tr>
                             <td>Messsy</td>
                             <td>53275532</td>
                             <td>15 May 2017</td>
-                            <td><label class="badge badge-gradient-warning">Dispatched</label></td>
+                            <td><label class="badge badge-gradient-success">Completed</label></td>
                             <td><a href="abc" > Order Details </a></td>
                           </tr>
                           <tr>
                             <td>John</td>
                             <td>53275533</td>
                             <td>14 May 2017</td>
-                            <td><label class="badge badge-gradient-warning">Dispatched</label></td>
+                            <td><label class="badge badge-gradient-success">Completed</label></td>
                             <td><a href="abc" > Order Details </a></td>
                           </tr>
                           <tr>
                             <td>Peter</td>
                             <td>53275534</td>
                             <td>16 May 2017</td>
-                            <td><label class="badge badge-gradient-warning">Dispatched</label></td>
+                            <td><label class="badge badge-gradient-success">Completed</label></td>
                             <td><a href="abc" > Order Details </a></td>
                           </tr>
                           <tr>
                             <td>Dave</td>
                             <td>53275535</td>
                             <td>20 May 2017</td>
-                            <td><label class="badge badge-gradient-warning">Dispatched</label></td>
+                            <td><label class="badge badge-gradient-success">Completed</label></td>
                             <td><a href="abc" > Order Details </a></td>
                           </tr>
                         </tbody>
@@ -116,24 +118,50 @@
 
           
       <div id="foot"></div>
-          <!-- partial -->
+    
         </div>
-        <!-- main-panel ends -->
+  
       </div>
-      <!-- page-body-wrapper ends -->
+     
     </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
+
     <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
+   
     <script src="../../assets/js/off-canvas.js"></script>
     <script src="../../assets/js/hoverable-collapse.js"></script>
     <script src="../../assets/js/misc.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <!-- End custom js for this page -->
+  
   </body>
 </html>
+
+
+
+ 
+       
+        <div className="form-group">
+        <p  style="margin-top: 10px;">GENDER</p>
+        <div className="form-check form-check-inline">
+        <input className="form-check-input"
+        type="radio"
+        name="priorityOption"
+        id="priorityLow"
+   
+        />
+ <label className="form-check-label">       Male     </label>
+
+        
+
+      
+     <input className="form-check-input"
+        type="radio"
+        name="priorityOption"
+   
+        />
+ <label className="form-check-label" >   Female   </label>
+
+      </div>   
+   
+       </div>
+
+        
+    
