--- a/views/product_form/add_product.html
+++ b/views/product_form/add_product.html
@@ -8,15 +8,16 @@
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
-    $(function(){
-      $('#header').load('../../partials/_navbar.html')
+     $(function(){
+      $('#header').load('../partials/_navbar.html')
     })
     $(function(){
-      $('#side').load('../../partials/_sidebar.html')
+      $('#side').load('../partials/_sidebar.html')
     })
     $(function(){
-      $('#foot').load('../../partials/_footer.html')
+      $('#foot').load('../partials/_footer.html')
     })
+
 
 
   </script>
