--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -6,44 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Purple Admin</title>
    
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-    $(function(){
-      $('#header').load('../partials/_navbar.html')
-    })
-    $(function(){
-      $('#side').load('../partials/_sidebar.html')
-    })
-    $(function(){
-      $('#foot').load('../partials/_footer.html')
-    })
-
-
-  </script>
-    <!-- plugins:css -->
+    
 
   
 
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
 
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="../../images/favicon.png" />
   </head>
   <body>
-    <div class="container-scroller">
-        
-        <div id="header"></div>
-        
-        <div class="container-fluid page-body-wrapper" style="margin-top: 70px;">
-    
-    
-     <div id="side"></div>
 
+    <div class="container-scroller">
+      
+    
+      <%- include("../partials/_navbar") %>
+
+
+        <div class="container-fluid page-body-wrapper">
+        <div>
+           <%- include("../partials/_sidebar") %>
+  
+ 
        
 <!-- side bar ends-->
-        <div class="main-panel">
+        <div class="main-panel" >
           <div class="content-wrapper">
             <div class="page-header">
               <h3 class="page-title">
@@ -62,7 +51,7 @@
               <div class="col-md-4 stretch-card grid-margin">
                 <div class="card bg-gradient-danger card-img-holder text-white">
                   <div class="card-body">
-                    <img src="../../assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="../../images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Weekly Sales <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
                     <h2 class="mb-5">$ 15,0000</h2>
@@ -73,7 +62,7 @@
               <div class="col-md-4 stretch-card grid-margin">
                 <div class="card bg-gradient-info card-img-holder text-white">
                   <div class="card-body">
-                    <img src="../../assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="../../images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Weekly Orders <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
                     <h2 class="mb-5">45,6334</h2>
@@ -84,7 +73,7 @@
               <div class="col-md-4 stretch-card grid-margin">
                 <div class="card bg-gradient-success card-img-holder text-white">
                   <div class="card-body">
-                    <img src="../../assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
+                    <img src="../../images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Visitors Online <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
                     <h2 class="mb-5">95,5741</h2>
@@ -113,7 +102,7 @@
                         <tbody>
                           <tr>
                             <td>
-                              <img src="../../assets/images/faces/face1.jpg" class="mr-2" alt="image"> David Grey </td>
+                              <img src="../../images/faces/face1.jpg" class="mr-2" alt="image"> David Grey </td>
                             <td> Fund is not recieved </td>
                             <td>
                               <label class="badge badge-gradient-success">DONE</label>
@@ -123,7 +112,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="../../assets/images/faces/face2.jpg" class="mr-2" alt="image"> Stella Johnson </td>
+                              <img src="../../images/faces/face2.jpg" class="mr-2" alt="image"> Stella Johnson </td>
                             <td> High loading time </td>
                             <td>
                               <label class="badge badge-gradient-warning">PROGRESS</label>
@@ -133,7 +122,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="../../assets/images/faces/face3.jpg" class="mr-2" alt="image"> Marina Michel </td>
+                              <img src="../../images/faces/face3.jpg" class="mr-2" alt="image"> Marina Michel </td>
                             <td> Website down for one week </td>
                             <td>
                               <label class="badge badge-gradient-info">ON HOLD</label>
@@ -143,7 +132,7 @@
                           </tr>
                           <tr>
                             <td>
-                              <img src="../../assets/images/faces/face4.jpg" class="mr-2" alt="image"> John Doe </td>
+                              <img src="../../images/faces/face4.jpg" class="mr-2" alt="image"> John Doe </td>
                             <td> Loosing control on server </td>
                             <td>
                               <label class="badge badge-gradient-danger">REJECTED</label>
@@ -175,16 +164,16 @@
                     </div>
                     <div class="row mt-3">
                       <div class="col-6 pr-1">
-                        <img src="../../assets/images/dashboard/img_1.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
-                        <img src="../../assets/images/dashboard/img_4.jpg" class="mw-100 w-100 rounded" alt="image">
+                        <img src="../../images/dashboard/img_1.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
+                        <img src="../../images/dashboard/img_4.jpg" class="mw-100 w-100 rounded" alt="image">
                       </div>
                       <div class="col-6 pl-1">
-                        <img src="../../assets/images/dashboard/img_2.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
-                        <img src="../../assets/images/dashboard/img_3.jpg" class="mw-100 w-100 rounded" alt="image">
+                        <img src="../../images/dashboard/img_2.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
+                        <img src="../../images/dashboard/img_3.jpg" class="mw-100 w-100 rounded" alt="image">
                       </div>
                     </div>
                     <div class="d-flex mt-5 align-items-top">
-                      <img src="../../assets/images/faces/face3.jpg" class="img-sm rounded-circle mr-3" alt="image">
+                      <img src="../../images/faces/face3.jpg" class="img-sm rounded-circle mr-3" alt="image">
                       <div class="mb-0 flex-grow">
                         <h5 class="mr-2 mb-2">School Website - Authentication Module.</h5>
                         <p class="mb-0 font-weight-light">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
@@ -200,30 +189,31 @@
            
           </div>
 
-          <div id="foot"></div>
+          <%- include("../partials/_footer") %>
 
           </div>
         
         <!-- main-panel ends -->
       </div>
     </div>
+    </div>
       <!-- page-body-wrapper ends -->
    
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="../../assets/vendors/chart.js/Chart.min.js"></script>
+    <script src="../../vendors/chart.js/Chart.min.js"></script>
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
+    <script src="../../js/off-canvas.js"></script>
+    <script src="../../js/hoverable-collapse.js"></script>
+    <script src="../../js/misc.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
-    <script src="../../assets/js/dashboard.js"></script>
-    <script src="../../assets/js/todolist.js"></script>
+    <script src="../../js/dashboard.js"></script>
+    <script src="../../js/todolist.js"></script>
     <!-- End custom js for this page -->
   </body>
 </html>
