--- a/views/order_details/pending.ejs
+++ b/views/order_details/pending.ejs
@@ -5,50 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Purple Admin</title>
+   
+    
 
   
-	<script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-    $(function(){
-      $('#header').load('../partials/_navbar.html')
-    })
-    $(function(){
-      $('#side').load('../partials/_sidebar.html')
-    })
-    $(function(){
-      $('#foot').load('../partials/_footer.html')
-    })
 
-
-  </script>
-    <!-- plugins:css -->
-    
-    
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
-  
-
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
-	<link rel="stylesheet" href="../../assets/css/style.css">
-	<link rel="stylesheet" href="../../assets/css/invoice.css">
+    <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+	<link rel="stylesheet" href="../../css/invoice.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="../../images/favicon.png" />
   </head>
   <body>
+
     <div class="container-scroller">
-        <!-- partial:partials/_navbar.html -->
-        <div id="header"></div>
-        <!-- partial -->
-        <div class="container-fluid page-body-wrapper" style="margin-top: 70px;">
-          <!-- partial:partials/_sidebar.html -->
+      
     
-     <div id="side"></div>
-          <!-- partial -->
+      <%- include("../partials/_navbar") %>
+
+
+        <div class="container-fluid page-body-wrapper">
+       <div>        
+            <%- include("../partials/_sidebar") %>
+        <!-- partial -->
           <div class="main-panel">
             <div class="content-wrapper">
               <div class="page-header">
@@ -56,7 +36,7 @@
 <div class="container" style="background-color: white;">
     <div class="row">
         <div class="col-xs-12">
-    		<div class="invoice-title" style="padding-left: 20px;">
+    		<div class="invoice-title" style="margin-left: 20px;">
                 <h2>Invoice</h2>
                 <h3>Order # 12345</h3>
     		</div>
@@ -151,24 +131,33 @@
 </div>
 </div>
 <!-- page-body-wrapper ends -->
-<button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 20px;">Delivered</button>
+<div class="container">
+    <div class="row">
+<div class="col-md-12">
+    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;">Delete</button>
+    <button type="button" class="btn btn-gradient-dark btn-fw"  style="margin-left: 10px;">Update</button>
+    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;"> Dispatch</button>
+    <button type="button" class="btn btn-gradient-dark btn-fw" style="margin-left: 10px;">Delivered</button>
+</div>
+       </div>
+   </div>
 </div>
 <div id="foot"></div>
 </div>
 
-
+</div>
 </div>
 </div>
 
 
     <!-- plugins:js -->
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
+    <script src="../../js/off-canvas.js"></script>
+    <script src="../../js/hoverable-collapse.js"></script>
+    <script src="../../js/misc.js"></script>
   </body>
 </html>
