--- a/views/orders/orders_delivered.ejs
+++ b/views/orders/orders_delivered.ejs
@@ -5,48 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Purple Admin</title>
-
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-      $(function(){
-      $('#header').load('../partials/_navbar.html')
-    })
-    $(function(){
-      $('#side').load('../partials/_sidebar.html')
-    })
-    $(function(){
-      $('#foot').load('../partials/_footer.html')
-    })
-
-
-
-  </script>
-    <!-- plugins:css -->
+   
     
-    
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
+
   
 
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+
+    <link rel="stylesheet" href="../../css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="../../images/favicon.png" />
   </head>
   <body>
-    <div class="container-scroller">
-      <!-- partial:partials/_navbar.html -->
-      <div id="header" ></div>
-      <!-- partial -->
-      <div class="container-fluid page-body-wrapper" style="margin-top: 70px;">
-        <!-- partial:partials/_sidebar.html -->
 
-   <div id="side"></div>
+    <div class="container-scroller">
+      
+    
+      <%- include("../partials/_navbar") %>
+
+
+        <div class="container-fluid page-body-wrapper">
+       <div>        
+            <%- include("../partials/_sidebar") %>
         <!-- partial -->
         <div class="main-panel">
           <div class="content-wrapper">
@@ -55,7 +36,7 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Orders Delievered</h4>
+                    <h4 class="card-title">Orders Delivered</h4>
                    
                     <table class="table">
                         <thead>
@@ -73,7 +54,7 @@
                             <td>53275531</td>
                             <td>12 May 2017</td>
                             <td><label class="badge badge-gradient-success">Completed</label></td>
-                            <td><a href="../order_details/delivered.html"> Order Details </a></td>
+                            <td><a href="/delivered"> Order Details </a></td>
                           </tr>
                           <tr>
                             <td>Messsy</td>
@@ -120,16 +101,17 @@
       <div id="foot"></div>
     
         </div>
-  
+      </div>
+
       </div>
      
     </div>
 
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
    
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
+    <script src="../../js/off-canvas.js"></script>
+    <script src="../../js/hoverable-collapse.js"></script>
+    <script src="../../js/misc.js"></script>
   
   </body>
 </html>
@@ -138,30 +120,7 @@
 
  
        
-        <div className="form-group">
-        <p  style="margin-top: 10px;">GENDER</p>
-        <div className="form-check form-check-inline">
-        <input className="form-check-input"
-        type="radio"
-        name="priorityOption"
-        id="priorityLow"
-   
-        />
- <label className="form-check-label">       Male     </label>
-
-        
-
-      
-     <input className="form-check-input"
-        type="radio"
-        name="priorityOption"
-   
-        />
- <label className="form-check-label" >   Female   </label>
-
-      </div>   
-   
-       </div>
+    
 
         
     
