--- a/views/partials/_sidebar.ejs
+++ b/views/partials/_sidebar.ejs
@@ -1,10 +1,10 @@
-<head><body>
+
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item nav-profile">
       <a href="#" class="nav-link">
         <div class="nav-profile-image">
-          <img src="../../assets/images/faces/face1.jpg" alt="profile">
+          <img src="../../images/faces/face1.jpg" alt="profile">
           <span class="login-status online"></span>
           <!--change to offline or busy as needed-->
         </div>
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="../../views/dashboard/index.html">
+      <a class="nav-link" href="/">
         <span class="menu-title">Dashboard</span>
         <i class="mdi mdi-home menu-icon"></i>
       </a>
@@ -29,22 +29,22 @@
       </a>
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_pending.html">Orders Pending</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_dispatched.html">Orders Dispatched</a></li>
-          <li class="nav-item"> <a class="nav-link" href="../../views/orders/orders_delivered.html">Orders Delivered</a></li>
+          <li class="nav-item"> <a class="nav-link" href="/orders_pending">Orders Pending</a></li>
+          <li class="nav-item"> <a class="nav-link" href="/orders_dispatched">Orders Dispatched</a></li>
+          <li class="nav-item"> <a class="nav-link" href="/orders_delivered">Orders Delivered</a></li>
         </ul>
       </div>
     </li>
    
     <li class="nav-item">
-      <a class="nav-link" href="../../views/product_form/add_product.html">
+      <a class="nav-link" href="/add_product">
         <span class="menu-title">Add Item</span>
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
       </a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="../../views/users/user_table.html">
+      <a class="nav-link" href="/user_table">
         <span class="menu-title">Users</span>
         <i class="mdi mdi-table-large menu-icon"></i>
       </a>
@@ -60,4 +60,4 @@
 
 
 
-</body></head>
+
