--- a/views/users/user_detail.ejs
+++ b/views/users/user_detail.ejs
@@ -1,68 +1,34 @@
-
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-    
-        <title>User Details</title>
-    
-
-      
-        
-        
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Purple Admin</title>
    
-
-   <!-- Required meta tags -->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>Purple Admin</title>
-
-   <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-    $(function(){
-      $('#header').load('../partials/_navbar.html')
-    })
-    $(function(){
-      $('#side').load('../partials/_sidebar.html')
-    })
-    $(function(){
-      $('#foot').load('../partials/_footer.html')
-    })
-
-
-  </script>
-    <!-- plugins:css -->
     
-    
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
+
   
 
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+
+    <link rel="stylesheet" href="../../css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
-        
-      
-
+    <link rel="shortcut icon" href="../../images/favicon.png" />
   </head>
-      <body>    
+  <body>
+
+    <div class="container-scroller">
+      
+    
+      <%- include("../partials/_navbar") %>
 
 
-
-<div class="container-scroller">
-    <!-- partial:partials/_navbar.html -->
-    <div id="header"></div>
-    <!-- partial -->
-    <div class="container-fluid page-body-wrapper" style="margin-top: 70px;">
-      <!-- partial:partials/_sidebar.html -->
-
- <div id="side"></div>
-      <!-- partial -->
+        <div class="container-fluid page-body-wrapper">
+        <div>
+           <%- include("../partials/_sidebar") %>
+  
       <div class="main-panel">
         <div class="content-wrapper">
           <div class="page-header">
@@ -178,17 +144,18 @@
     <div id="foot"></div>
       </div>
     </div>
+    </div>
 </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
+    <script src="../../js/off-canvas.js"></script>
+    <script src="../../js/hoverable-collapse.js"></script>
+    <script src="../../js/misc.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page -->
     <!-- End custom js for this page -->
